force-app/main/default/objects/CopadoBranchCleanupSettings__c/CopadoBranchCleanupSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Copado Branch Cleanup Settings</label>
</CustomObject>