force-app/main/default/objects/CopadoBranchCleanupSettings__c/fields/APITimeout__c.field-meta.xml
<CustomField>
    <fullName>APITimeout__c</fullName>
    <defaultValue>120000</defaultValue>
    <label>API Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>