force-app/main/default/objects/CopadoBranchCleanupSettings__c/fields/DaysToKeep__c.field-meta.xml
<CustomField>
    <fullName>DaysToKeep__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Days To Keep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>