force-app/main/default/objects/CopadoBranchCleanupSettings__c/fields/DeleteDeployments__c.field-meta.xml
<CustomField>
    <fullName>DeleteDeployments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Delete Deployments</label>
    <type>Checkbox</type>
</CustomField>