force-app/main/default/objects/CopadoBranchCleanupSettings__c/fields/DryRunMode__c.field-meta.xml
<CustomField>
    <fullName>DryRunMode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dry Run Mode</label>
    <type>Checkbox</type>
</CustomField>