force-app/main/default/objects/CopadoBranchCleanupSettings__c/fields/EmailRecipients__c.field-meta.xml
<CustomField>
    <fullName>EmailRecipients__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>Email Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>