force-app/main/default/objects/CopadoBranchCleanupSettings__c/fields/ProtectedBranches__c.field-meta.xml
<CustomField>
    <fullName>ProtectedBranches__c</fullName>
    <label>Protected Branches</label>
    <length>255</length>
    <type>Text</type>
</CustomField>